correcting cover image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting.">
     <article class="content">
         <section id="search-engine-optimization" class="content-block">
             <img src="./assets/images/search-engine-optimization.jpg"
