changing image properties

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting.">
+    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting."
+        role="presentation">
     <article class="content">
         <section id="search-engine-optimization" class="content-block">
             <img src="./assets/images/search-engine-optimization.jpg"
