more splash image fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting."
+    <img class="splash" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting."
         role="presentation">
     <article class="content">
         <section id="search-engine-optimization" class="content-block">
