adding alt tags for benefits icons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <aside class="benefits">
         <section class="benefit-block">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers
                 directly
@@ -73,7 +73,7 @@
         </section>
         <section class="benefit-block">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and
                 visibility
@@ -82,7 +82,7 @@
         </section>
         <section class="benefit-block">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost management icon"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no
                 longer
